--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -48,13 +48,15 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="2"
             android:text="Password" />
 
         <TextView
             android:id="@+id/tvPass"
-            android:layout_width="wrap_content"
+            android:layout_weight="3"
+            android:layout_width="0dp"
             android:layout_height="wrap_content" />
 
     </LinearLayout>
@@ -64,13 +66,15 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_weight="2"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Age" />
 
         <TextView
+            android:layout_weight="3"
             android:id="@+id/tvAge"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content" />
 
     </LinearLayout>
@@ -80,15 +84,16 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_weight="2"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Float" />
 
         <TextView
             android:id="@+id/tvFresult"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="3" />
 
     </LinearLayout>
 </LinearLayout>
